@@ -300,6 +300,11 @@ repository implementation.
     be successful, CreateInstance must have stored the instance name
     in that same form, without special character encoding.
 
+42. (Roger Kumpf - HP) 15 Nov 2001 Added a toXml(void) method to
+    the CIMValue class.  Eliminated improper use of CIMValue.toString(),
+    often replacing with CIMValue.get(String&) or CIMValue.toXml().
+    Also added some error handling in the indication handlers.
+
 ---------------------------------------------------------------------------
 Version 1.1 - July 2001 Development branch
               Tagged as version_1_01 on 3 August 2001 (sorry should have been
